# electromyogram

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.rst  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
app/: app.py  app_schaede.py
app/data/: fridlund.json  kuramoto.json
app/schaede_images/: 01_Neutral.npy  02_Stirn-runzeln.npy  03_Augen-zu.npy  04_Augen-doll-zu.npy  05_Nase-rümpfen.npy  06_Lächeln-1.npy  07_Lächeln-2.npy  08_Mund-spitzen.npy  09_Wangen-aufblasen.npy  10_Zähne-fletsch.npy  11_Mundwinkel-runter.npy
docs/: conf.py  index.md
examples/: emotions.ipynb  locations.ipynb  schemes.ipynb
examples/data/: fridlund.csv  kuramoto.csv
src/electromyogram/: __init__.py  consts.py  face_model.h5  locations_fridlund.json  locations_kuramoto.json  plot.py  schemes.py  utils.py
tests/: conftest.py
